// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GridViewFieldLookup component > URL lookup field shows hyperlink when active 1`] = `
<div
  class="array-field__item"
  field="[object Object]"
  readonly="false"
  storeprefix="page/"
  workspaceid="10"
>
  <div
    class="array-field__ellipsis"
    title="jadawl.site"
  >
    <a
      class="forced-pointer-events-auto"
      href="https://jadawl.site"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      jadawl.site
    </a>
  </div>
</div>
`;

exports[`GridViewFieldLookup component > URL lookup field shows text when inactive 1`] = `
<div
  class="array-field__item"
  field="[object Object]"
  readonly="false"
  storeprefix="page/"
  workspaceid="10"
>
  <div
    class="array-field__ellipsis"
    title="jadawl.site"
  >
    <u>
      jadawl.site
    </u>
  </div>
</div>
`;
